--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
 body {
     background-image: url("https://i.imgur.com/y8Jcrwv.jpg");
     background-size: cover;
-    font-family: "Trirong", sans-serif;
+    font-family: "My Custom Font", Verdana, Tahoma;
+}
+
+@font-face {
+    font-family: "My Custom Font";
+    src: url(http://www.example.org/mycustomfont.ttf) format("truetype");
+}
+
+.smalltext {
+    color: gray;
+    font-size: 50%;
+    text-align: right;
 }
 
 ul li {
@@ -11,7 +22,7 @@ ul li {
 }
 
 .content h3 img {
-    width: 30%;
+    width: 70%;
 }
 
 .content h3 {
@@ -25,7 +36,7 @@ ul li {
     width: 70%;
     padding: 10px;
     background-color: rgba(255, 255, 255, 0.8); /* Set a semi-transparent white background */
-    border-radius: 10px;
+    border-radius: 8px;
 }
 
 .content ul li a {
@@ -65,13 +76,13 @@ i:hover {
 
 .ending {
     color: #000;
-    font-size: 25px;
+    font-size: 100%;
     text-align: center;
     position: fixed;
     bottom: 0;
     background-color: rgba(255, 255, 255); /* Set a semi-transparent white background */
     width: 100%;
-    height: 40px;
+    height: 3%;
 }
 
 .content ul li a:hover {
@@ -87,23 +98,18 @@ i:hover {
     padding: 10px 0; /* Add some padding for better spacing */
 }
 
-.smalltext {
-    color: gray;
-    font-size: 50%;
-    text-align: right;
-}
-
 
 .wf-section {
     color: #000;
-    font-size: 25px;
+    font-size: 150%;
     text-align: center;
     position: sticky;
     top: 0;
-    background-color: rgba(255, 255, 255, 0.9); /* Set a semi-transparent white background */
-    width: 100%;
-    height: 45px;
-    z-index: 9999;
+    background-color: rgba(255, 255, 255); /* Set a semi-transparent white background */
+    width: relative;
+    height: 3%;
+    z-index: 9999; 
+    border-radius: 8px;
 }
 
 .visiting {
