--- a/style.css
+++ b/style.css
@@ -17,8 +17,10 @@ body {
 
 ul li {
     display: inline-block;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
 
 .content h3 img {
@@ -115,11 +117,11 @@ i:hover {
 .visiting {
     color: #000;
     font-weight: 500;
-    font-size: 30px;
+    font-size: 25px;
     transform: scale(1);
     transition: all 0.3s;
     display: inline-block;
-    height: 40px;
+    height: 30%;
     font-weight: bold;
 }
 
